src/test/ui/let-else/let-else-fail.stderr
error[E0308]: mismatched types
  --> $DIR/let-else-fail.rs:4:32
   |
LL |       let Some(x) = Some(1) else {
   |  ________________________________^
LL | |         Some(2);
LL | |     };
   | |_____^ expected `!`, found `()`
   |
   = note:   expected type `!`
           found unit type `()`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
